--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,9 @@
 name: australia_simulator
-description: An absolute bare-bones web app.
+description: Get the f*ck out of my house.
 version: 0.0.1
-#homepage: https://www.example.com
-#author: admin <email@example.com>
 
 environment:
-  sdk: '>=1.20.1 <2.0.0'
+  sdk: '>=1.24 <2.0.0'
 
 #dependencies:
 #  path: ^1.4.1
@@ -17,8 +15,6 @@ dev_dependencies:
 transformers:
 - dart_to_js_script_rewriter
 
-# Uncomment the following in sdk 1.24+ to make pub serve
-# use dartdevc (webdev.dartlang.org/tools/dartdevc).
-#web:
-#  compiler:
-#    debug: dartdevc
+web:
+  compiler:
+    debug: dartdevc
