--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,11 +5,13 @@ version: 0.0.1
 environment:
   sdk: '>=1.24.0 <2.0.0'
 
-#dependencies:
+dependencies:
+  browser: ^0.10.0
+  start:   ">=0.2.7 <0.3.0"
+  vector_math: any
 #  path: ^1.4.1
 
 dev_dependencies:
-  browser: ^0.10.0
   dart_to_js_script_rewriter: ^1.0.1
 
 transformers:
