--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 dependencies:
   browser: ^0.10.0
   start:   ">=0.2.7 <0.3.0"
+  vector_math: any
 #  path: ^1.4.1
 
 dev_dependencies:
