--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   browser: ^0.10.0
   start:   ">=0.2.7 <0.3.0"
   vector_math: any
+  rxdart: ^0.15.0
 #  path: ^1.4.1
 
 dev_dependencies:
